--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
 <app-nav></app-nav>
-<router-outlet></router-outlet>
+<div class="prose m-auto">
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
