done outer layer SPA

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,1 +1,4 @@
-<p>nav works!</p>
+<div class="navbar sticky top-0 bg-neutral">
+  <button routerLink="">Home</button>
+  <button routerLink="people">People</button>
+</div>
