--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <app-nav></app-nav>
-<div class="prose m-auto">
+<div class="prose mx-auto mb-40 mt-20">
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
