--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,2 +1,2 @@
 <h1 class="text-center">404 Page not found</h1>
-<p class="text-center">the URL may be invalid</p>
+<p class="mb-20 text-center">the URL may be invalid</p>
