home (no links)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
 <app-nav></app-nav>
-<div class="prose mx-auto mb-40 mt-20">
-  <router-outlet></router-outlet>
+<div class="mx-5">
+  <div class="prose mx-auto mb-60 mt-20">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 <app-footer></app-footer>
