--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,13 @@
-@for (article of articles; track article.author) {
-  <div class="card w-96 bg-base-100 shadow-xl">
-    <figure>
-      <img
-        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-        alt="Shoes"
-      />
-    </figure>
-    <div class="card-body">
-      <h2 class="card-title">Shoes!</h2>
-      <p>If a dog chews shoes whose shoes does he choose?</p>
-      <div class="card-actions justify-end">
-        <button class="btn btn-primary">Buy Now</button>
+<div class="flex flex-wrap gap-10">
+  @for (article of articles; track article.author) {
+    <div class="card w-60 bg-base-300 shadow-xl">
+      <figure class="my-0 h-40">
+        <img [src]="article.img" alt="Shoes" class="object-fill" />
+      </figure>
+      <div class="card-body">
+        <h2 class="card-title">{{ article.title }}</h2>
+        <p>{{ article.author }}</p>
       </div>
     </div>
-  </div>
-}
+  }
+</div>
