--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<div class="navbar sticky top-0 bg-neutral">
+<div class="navbar sticky top-0 z-10 bg-neutral">
   <button routerLink="">Home</button>
   <button routerLink="people">People</button>
 </div>
