--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
-<div class="w-full bg-base-300 p-10">
+<footer class="w-full bg-base-300 p-10">
   <p>GEMATMW Group 1<br />Copyright &copy; 2024. All rights reserved.</p>
   <a
     class="mt-10 block hover:underline"
     href="mailto:justin_ryan_uy@dlsu.edu.ph"
     >Contact us</a
   >
-</div>
+</footer>
