--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,1 +1,6 @@
-<p>article works!</p>
+<h1>{{ article.title }}</h1>
+<p>Written by: {{ article.author }}</p>
+<figure class="mb-40 mt-20 h-40 overflow-hidden">
+  <img [src]="article.img" alt="Article Image" class="object-fill" />
+</figure>
+<p>{{ article.content }}</p>
