--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <p>GEMATMW Group 1<br />Copyright &copy; 2024. All rights reserved.</p>
   <a
     class="mt-10 block hover:underline"
-    href="mailto:justin_ryan_uy@dlsu.edu.ph"
+    href="mailto:joramm_delatorre@dlsu.edu.ph,anie_guo@dlsu.edu.ph,menandro_siozon@dlsu.edu.ph,andrea_jadyn_tan@dlsu.edu.ph,justin_ryan_uy@dlsu.edu.ph"
     >Contact us</a
   >
 </footer>
