--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky top-0 z-10 bg-neutral">
+<nav class="navbar sticky top-0 z-10 bg-secondary">
   <button routerLink="">Home</button>
   <button routerLink="people">People</button>
 </nav>
