--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<header class="flex w-full flex-wrap bg-base-200 p-5">
+<header class="flex w-full flex-wrap bg-neutral p-5">
   <h1 class="text-3xl font-extrabold text-primary">GEMATMW Group 1</h1>
-  <p class="ml-auto self-end max-sm:ml-0">
+  <p class="ml-auto self-end text-neutral-content max-sm:ml-0">
     Copyright &copy; 2024. All rights reserved.
   </p>
 </header>
