--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,3 +1,3 @@
 button {
-  @apply btn btn-ghost rounded-none font-semibold text-secondary hover:bg-primary hover:text-primary-content;
+  @apply btn btn-ghost rounded-none font-semibold text-secondary-content hover:bg-primary hover:text-primary-content;
 }
