--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
       <figure class="my-0 h-40 transition group-hover:bg-neutral-content">
         <img
           [src]="article.img"
-          alt="Shoes"
+          alt="Article Image"
           class="object-fill transition group-hover:opacity-25"
         />
       </figure>
