--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -13,7 +13,7 @@
 <section>
   <h1>Research Compilers</h1>
   <p>
-    Andrea Tan&nbsp;
+    Andrea Jadyn Tan&nbsp;
     <a href="mailto:andrea_jadyn_tan@dlsu.edu.ph"
       ><fa-icon [icon]="faEnvelope"></fa-icon></a
     >&nbsp;
