--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -1,5 +1,5 @@
 <section>
-  <h1>Researcher</h1>
+  <h1>Researchers</h1>
   <p>
     Menandro Siozon&nbsp;
     <a href="mailto:menandro_siozon@dlsu.edu.ph"
@@ -9,17 +9,16 @@
       ><fa-icon [icon]="faFacebook"></fa-icon
     ></a>
   </p>
-</section>
-<section>
-  <h1>Research Compilers</h1>
   <p>
     Andrea Jadyn Tan&nbsp;
     <a href="mailto:andrea_jadyn_tan@dlsu.edu.ph"
       ><fa-icon [icon]="faEnvelope"></fa-icon></a
     >&nbsp;
     <a target="_blank" href="https://www.facebook.com/100016409554751/"
-      ><fa-icon [icon]="faFacebook"></fa-icon></a
-    ><br />
+      ><fa-icon [icon]="faFacebook"></fa-icon
+    ></a>
+  </p>
+  <p>
     Anie Guo&nbsp;
     <a href="mailto:anie_guo@dlsu.edu.ph"
       ><fa-icon [icon]="faEnvelope"></fa-icon></a
@@ -28,17 +27,19 @@
       ><fa-icon [icon]="faFacebook"></fa-icon
     ></a>
   </p>
-</section>
-<section>
-  <h1>Web Developers</h1>
   <p>
     Joramm Fredrik Dela Torre&nbsp;
     <a href="mailto:joramm_delatorre@dlsu.edu.ph"
       ><fa-icon [icon]="faEnvelope"></fa-icon></a
     >&nbsp;
     <a target="_blank" href="https://www.facebook.com/100018636383752/"
-      ><fa-icon [icon]="faFacebook"></fa-icon></a
-    ><br />
+      ><fa-icon [icon]="faFacebook"></fa-icon
+    ></a>
+  </p>
+</section>
+<section>
+  <h1>Web Developer</h1>
+  <p>
     Justin Ryan Uy&nbsp;
     <a href="mailto:justin_ryan_uy@dlsu.edu.ph"
       ><fa-icon [icon]="faEnvelope"></fa-icon></a
