--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -3,4 +3,4 @@
 <figure class="mb-40 mt-20 h-40 overflow-hidden">
   <img [src]="article.img" alt="Article Image" class="object-fill" />
 </figure>
-<div [innerHTML]="article.content"></div>
+<article [innerHTML]="article.content"></article>
