--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -9,7 +9,7 @@
       </h1>
     </div>
     <div class="collapse-content">
-      <p>hello</p>
+      {{ documentation.content }}
     </div>
   </div>
 }
