--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -1,8 +1,8 @@
 @for (documentation of documentations; track documentation.date) {
   <div class="collapse collapse-arrow bg-base-300">
     <input type="radio" checked="checked" />
-    <div class="collapse-title">
-      <h1>
+    <div class="collapse-title bg-neutral">
+      <h1 class="text-neutral-content">
         {{ documentation.date.getMonth() + 1 }}/{{
           documentation.date.getDate()
         }}/{{ documentation.date.getFullYear() }}
