--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -9,6 +9,15 @@
         }}/{{ documentation.date.getFullYear() }}
       </p>
     </div>
-    <div class="collapse-content" [innerHTML]="documentation.content"></div>
+    <div class="collapse-content">
+      <p>{{ documentation.content }}</p>
+      <figure class="mb-0 flex h-40 items-center overflow-hidden rounded-2xl">
+        <img
+          [src]="documentation.img"
+          alt="Documentation Image"
+          class="object-fill"
+        />
+      </figure>
+    </div>
   </div>
 }
